使用atlc3计算阻抗 速度快一些

--- a/z_extractor.project
+++ b/z_extractor.project
@@ -142,7 +142,7 @@
         <Library Value="z"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -ref &quot;GND,VCC_DRAM-1V5&quot; -net &quot;/ddr3/DCKE&quot; -coupled &quot;/ddr3/DCK_N:/ddr3/DCK_P&quot; -coupled_max_d 2.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -lossless_tl 1 -step 0.5 -o dck" UseSeparateDebugArgs="no" DebugArguments=" -pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -rl -pad &quot;L5.2:R19.1&quot;  -o newcfg" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/桌面/test/test.kicad_pcb -ref &quot;GND&quot; -net &quot;/S1&quot; -coupled &quot;/SN:/SP&quot; -coupled_max_gap 0.508 -coupled_min_len 2.54 -ltra 0 -mmtl 0 -lossless_tl 1 -step 0.5 -o newcfg" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
