--- a/z_extractor.project
+++ b/z_extractor.project
@@ -142,7 +142,7 @@
         <Library Value="z"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/桌面/test/test.kicad_pcb -ref &quot;GND&quot; -net &quot;/S1&quot; -coupled &quot;/SN:/SP&quot; -coupled_max_gap 0.508 -coupled_min_len 2.54 -ltra 0 -mmtl 0 -lossless_tl 1 -step 0.5 -o newcfg" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments=" -pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -ref &quot;GND&quot; -coupled &quot;USB_D0N:USB_D0P&quot; -coupled_max_gap 0.508 -coupled_min_len 0.5 -ltra 0 -mmtl 0 -lossless_tl 1 -step 0.5 -o usb" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
