插入版权信息

--- a/z_extractor.project
+++ b/z_extractor.project
@@ -12,6 +12,7 @@
     <File Name="plugin/z_extractor.py"/>
   </VirtualDirectory>
   <VirtualDirectory Name="z_extractor">
+    <File Name="LICENSE"/>
     <File Name="calc.cpp"/>
     <File Name="calc.h"/>
     <File Name="kicad_pcb_parser.h"/>
