--- a/z_extractor.project
+++ b/z_extractor.project
@@ -154,7 +154,7 @@
         <Library Value="z"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/work/pcba/pcb/test_antenna/test_antenna.kicad_pcb -ant -net &quot;GND&quot; -fp PATCH_ANT1 -port PATCH_ANT1:1:F.Cu:PATCH_ANT1:1:B.Cu:z:50.0:1 -nf2ff &quot;PATCH_ANT1&quot; -mesh_range 118.5:159.6:0.3:x -mesh_range 129.8:162.4:0.3:y  -freq 2.4e9 -max_freq 3e9 -criteria -10 -bc MUR -o patch" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/work/pcba/pcb/esp32s3_core/esp32s3_core.kicad_pcb -t -ref &quot;GND&quot; -net &quot;/GPIO9&quot; -coupled_max_gap 0.508 -coupled_min_len 2.54 -ltra 0 -mmtl 0 -lossless_tl 1 -via_tl_mode 0 -step 0.508 -o xxx" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
