--- a/z_extractor.project
+++ b/z_extractor.project
@@ -143,7 +143,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="linux" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O2;-fopenmp;-Wall" C_Options="-g;-O2;-fopenmp;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="1">
+      <Compiler Options="-g;-O0;-fopenmp;-Wall" C_Options="-g;-O0;-fopenmp;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="1">
         <IncludePath Value="/usr/include/opencv4/"/>
       </Compiler>
       <Linker Options="-fopenmp" Required="yes">
@@ -154,7 +154,7 @@
         <Library Value="z"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/work/pcba/pcb/test_sp/test_sp.kicad_pcb -sp -net &quot;GND,/S,/T&quot; -fp C1 -fp R1 -fp R2 -fp R3 -port &quot;R1:1:F.Cu:R1:1:B.Cu:z:50.0:1&quot; -port &quot;R2:1:F.Cu:R2:1:B.Cu:z:50.0:0&quot; -le &quot;R3&quot; -le &quot;C1&quot; -mesh_range 139.0:146.0:0.1:x -mesh_range 99.0:100.0:0.1:y  -max_freq 5e9 -criteria -30 -bc MUR -o newcfg" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments=" -pcb /home/mx/work/pcba/pcb/testtl/testtl.kicad_pcb -sp -net &quot;GND,/s&quot; -fp R1 -fp R2 -port &quot;R2:1:F.Cu:R2:1:B.Cu:z:50.0:1&quot; -port &quot;R1:1:F.Cu:R1:1:B.Cu:z:50.0:0&quot; -mesh_range 119.0:158.0:0.5:x -mesh_range 83.0:85.0:0.1:y  -max_freq 5e9 -criteria -10 -bc MUR -o newcfg" UseSeparateDebugArgs="no" DebugArguments=" -pcb /home/mx/work/pcba/pcb/testtl/testtl.kicad_pcb -sp -net &quot;GND,/s&quot; -fp R1 -fp R2 -port &quot;R2:1:F.Cu:R2:1:B.Cu:z:50.0:1&quot; -port &quot;R1:1:F.Cu:R1:1:B.Cu:z:50.0:0&quot; -mesh_range 119.0:158.0:0.5:x -mesh_range 83.0:85.0:0.1:y  -max_freq 5e9 -criteria -10 -bc MUR -o newcfg" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
@@ -167,6 +167,7 @@
       <PreBuild/>
       <PostBuild>
         <Command Enabled="yes">cp $(IntermediateDirectory)/$(ProjectName) ~/.local/share/kicad/7.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/linux</Command>
+        <Command Enabled="yes">cp $(IntermediateDirectory)/$(ProjectName) ~/.local/share/kicad/8.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/linux</Command>
         <Command Enabled="yes">cp $(WorkspacePath)/plugin/z_extractor.py ~/.local/share/kicad/7.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/</Command>
         <Command Enabled="yes">cp $(WorkspacePath)/plugin/rl_extractor.py ~/.local/share/kicad/7.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/</Command>
         <Command Enabled="yes">cp $(WorkspacePath)/plugin/antenna.py ~/.local/share/kicad/7.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/</Command>
